Rename form component directory, remove side nav placeholder text, fix gallery text on mobile

--- a/src/components/body/contact/contact.css
+++ b/src/components/body/contact/contact.css
@@ -4,3 +4,7 @@
     display: block;
     font-style: italic;
 }
+
+.faq-text {
+    padding: 10px;
+}
