--- a/src/components/body/imagegallery/imagegallery.css
+++ b/src/components/body/imagegallery/imagegallery.css
@@ -13,11 +13,6 @@
     backface-visibility: hidden;
 }
 
-@media only screen and (max-width: 400px) {
-    .gallery-image {
-        width: 300px;
-    }
-}
 
 .gallery-text {
     position: absolute;
@@ -27,6 +22,16 @@
     color: white;
     font-size: 16px;
     padding: 16px 32px;
+}
+
+@media only screen and (max-width: 400px) {
+    .gallery-image {
+        width: 300px;
+        height: 300px;
+    }
+    .overlay, .gallery-text {
+        position: unset;
+    }
 }
 
 @media (min-width:1025px) {
